# winstow

./: .gitignore  .winstowrc.example  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: STATIC_LINKING.md  TECHNICAL_CONCEPT.md
src/: adopt.rs  cli.rs  config.rs  error.rs  fs_ops.rs  ignore.rs  logger.rs  main.rs  path_utils.rs  planner.rs  stow.rs  unstow.rs
tests/: integration_tests.rs
