[package]
name = "winstow"
version = "0.1.0"
edition = "2024"
authors = ["Mathias Koch"]
description = "Windows-native symlink farm manager inspired by GNU Stow"
license = "MIT"
repository = "https://github.com/MathiasCodes/winstow"
readme = "README.md"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "cargo"] }
thiserror = "2.0.17"
glob = "0.3.3"
toml = "0.9.8"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization (slower compile)
strip = true           # Remove debug symbols
panic = "abort"        # No unwind tables
